# fylorg

./: Cargo.toml  Gemfile  README.md  dictionary.sample.json  filemap.example.json  fylorg.gemspec
lib/: cli.rb  fylorg.rb
lib/fylorg/: confparser.rb  fileman.rb  matcher.rb
src/: cli.rs  config.rs  main.rs  organizer.rs
