[package]
name = "fylorg"
version = "0.0.1"
edition = "2021"
authors = ["Sreedev Kodichath <sreedev@icloud.com>"]
license = "MIT"
description = "Fylorg - Automatic File Organizer"
readme = "README.md"
repository = "https://github.com/sreedevk/fylorg"
homepage = "https://github.com/sreedevk/fylorg"
categories = ["command-line-utilities"]
keywords = [
  "automatic-file-organizer",
  "fylorg",
]

[[bin]]
name = "fylorg"
test = false
bench = false

[dependencies]
clap = { version = "4.0.12", features = ["derive"] }
glob = "0.3.0"
itertools = "0.10.5"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
thiserror = "1.0.37"
